objects/alfre_IBM__c.object
<CustomObject>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripcion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <label>Telefono</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
</CustomObject>